--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Michael Frabott</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="text-center">
-        <h1>Michael Frabott</h1>
+        <h1 class="gradient-text">Michael Frabott</h1>
         <nav>
-            <ul>
-                <li><a href="#bio">Biography</a></li>
-                <li><a href="#work">Creations</a></li>
-                <li><a href=#contact-info>Contact</a></li>
-            </ul>
+                <a href="#bio">Biography</a>
+                <a href="#work">Creations</a>
+                <a href=#contact-info>Contact</a>
         </nav>
     </header>
     
