addeda and applied Google font

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Michael Frabott</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syncopate&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="text-center">
         <h1 class="gradient-text">Michael Frabott</h1>
         <nav>
-                <a href="#bio">Biography</a>
+                <a href="#bio">Info</a>
                 <a href="#work">Creations</a>
                 <a href=#contact-info>Contact</a>
         </nav>
@@ -22,7 +24,7 @@
     <main>
 <!-- bio including photo or avatar -->
         <section class="bio" id="bio">
-            <h2>Biography</h2>
+            <h2>Info</h2>
         </section>
 
         <!-- project screenshots/image demos that link to the deployed projects -->
