debugged small screen display issue, changed section heading to 'Projects'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
 
         <nav>
-                <a href="#work">Creations</a>
+                <a href="#creations">Projects</a>
                 <a href="#bio">About</a>
                 <a href=#contact-info>Contact</a>
         </nav>
@@ -31,8 +31,8 @@
 
     <main>
         <!-- Project screenshots/image demos that link to the deployed projects -->
-        <h2 class="section-heading dark">Creations</h2>
-        <section class="creations" id="creations"> 
+        <h2 class="section-heading dark" id="creations">Projects</h2>
+        <section class="creations" > 
             <!-- First project image/section should be larger than others -->        
             <section class="projects-highlight-pane">            
                 <section class="project focus-project" id="first-project">                
