--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <section class="projects-highlight-pane">            
                 <section class="project focus-project" id="first-project">                
                     <section class="project-title">
-                        <h3>Focus Project</h3>
-                        <h4>Coming Soon!</h4>
+                        <h3>More Than a Game</h3>
+                        <h4>javaScript</h4>
                     </section>
         
                     <!-- With a lack of projects to display, the link goes to my GitHub. I did not include additional links to subsequent placeholders. -->
                     <section class="project-image">
-                        <a href="https://github.com/mfrabott/"><img src="./assets/images/60-300x300.jpg" alt="Placeholder image of an overhead view of a desk neatly organized with a computer monitor, tablet, glasses, keyboard, mouse, notebook, and pen." ></img></a>
+                        <a href="https://mfrabott.github.io/More-Than-A-Game/"><img src="./assets/images/moreThanAGame3.png" alt="Placeholder image of an overhead view of a desk neatly organized with a computer monitor, tablet, glasses, keyboard, mouse, notebook, and pen." ></img></a>
                     </section>
                 </section>  
             </section>  
