Update LinkedIn URL and focus image size

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <ul>
                 <li><span class="contact-link"><a href="mailto: michael.frabott@gmail.com">Write</span></a> | michael.frabott@gmail.com</li>
                 <li><span class="contact-link"><a href="tel:6143063071">Dial</a></span> | (614) 306-3071</li>
-                <li><span class="contact-link"><a href=https://www.linkedin.com/in/michael-frabott-a4825b254>Connect</a></span> | LinkedIn</li>
+                <li><span class="contact-link"><a href=https://www.linkedin.com/in/michael-frabott>Connect</a></span> | LinkedIn</li>
             </ul>
         </section>
     </main>
