Add new feature project

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <section class="projects-highlight-pane">            
                 <section class="project focus-project" id="first-project">                
                     <section class="project-title">
-                        <h3>More Than a Game</h3>
-                        <h4>javaScript</h4>
+                        <h3>Graphical Reservation</h3>
+                        <h4>JavaScript, Express, MySQL, Sequelize, Handlebars</h4>
                     </section>
         
                     <!-- With a lack of projects to display, the link goes to my GitHub. I did not include additional links to subsequent placeholders. -->
                     <section class="project-image">
-                        <a href="https://mfrabott.github.io/More-Than-A-Game/"><img src="./assets/images/moreThanAGame3.png" alt="Placeholder image of an overhead view of a desk neatly organized with a computer monitor, tablet, glasses, keyboard, mouse, notebook, and pen." ></img></a>
+                        <a href="https://graphical-restaurant.herokuapp.com/"><img src="./assets/images/graphical-rest.png" alt="Screen grab of the table selection page of the Graphical Reservation App" ></img></a>
                     </section>
                 </section>  
             </section>  
@@ -52,11 +52,11 @@
             <section class="projects-pane left-pane">
                 <section class="project" id="second-project">
                     <section class="project-title">
-                        <h3>Second Project</h3>
-                        <h4>Coming Soon!</h4>
+                        <h3>More Than a Game</h3>
+                        <h4>javaScript</h4>
                     </section>
                     <section class="project-image">
-                        <img src="./assets/images/1021-300x300.jpg" alt="Black and white placeholder image of clouds surrounding distant tree tops."></img>
+                        <a href="https://mfrabott.github.io/More-Than-A-Game/"><img src="./assets/images/moreThanAGame3.png" alt="Screen grab of the application, More Than a Game."></img>
                     </section>
                 </section>
                 
