replace missing closing a tag

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <h4>javaScript</h4>
                     </section>
                     <section class="project-image">
-                        <a href="https://mfrabott.github.io/More-Than-A-Game/"><img src="./assets/images/moreThanAGame3.png" alt="Screen grab of the application, More Than a Game."></img>
+                        <a href="https://mfrabott.github.io/More-Than-A-Game/"><img src="./assets/images/moreThanAGame3.png" alt="Screen grab of the application, More Than a Game."></img></a>
                     </section>
                 </section>
                 
